src/test/ui/issues/issue-45829/rename-use-vs-extern.stderr
error[E0254]: the name `issue_45829_b` is defined multiple times
  --> $DIR/rename-use-vs-extern.rs:4:5
   |
LL | extern crate issue_45829_b;
   | --------------------------- previous import of the extern crate `issue_45829_b` here
LL | use std as issue_45829_b;
   |     ^^^^^^^^^^^^^^^^^^^^ `issue_45829_b` reimported here
   |
   = note: `issue_45829_b` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | use std as other_issue_45829_b;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0254`.
